fix (#2743): version switcher stack on mobile

--- a/src/components/version-language-switcher/version-language-switcher.css
+++ b/src/components/version-language-switcher/version-language-switcher.css
@@ -29,3 +29,36 @@
     display: flex; /* if needed to align items horizontally */
     align-items: center; /* vertically align content */
 }
+
+@media (max-width: 623px) {
+    [slot="version"] {
+        display: flex; /* if needed to align items horizontally */
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 2px;
+        margin-top: 0;
+
+    }
+}
+
+@media (max-width: 623px) {
+    [slot="version"] {
+        display: flex; /* if needed to align items horizontally */
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 2px;
+        margin-top: 0;
+
+    }
+}
+
+@media (max-width: 623px) {
+    [slot="version"] {
+        display: flex; /* if needed to align items horizontally */
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 2px;
+        margin-top: 0;
+
+    }
+}
